fix: domain align

--- a/style.css
+++ b/style.css
@@ -164,8 +164,7 @@ main > .domains > div {
 }
 
 main > .domains > form {
-    display: flex;
-    flex-direction: row;
+    grid-template-columns: 76px auto 90px;
     height: 50px;
     margin-top: 50px;
     border: 1px solid #D9D9D9;
@@ -203,10 +202,4 @@ main > .domains > form [name=domains] {
     padding-right: calc(15px + 8px);
 
 }
-
-main > .domains > form [name=domains]:after {
-    /*content: "<";*/
-}
-
-0rem
 
